@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==03/03/2010==
+Trevius: Added functionality to the EQEmu Web Tool to show IP information based on account searches.
+
 ==03/01/2010==
 Trevius: Added 2 new optional arguments to quest::gmsay(text, [color, send_to_world?]) - allows changing color and sending to world or just zone.
 Trevius: Normal Saylinks should now work without requiring a target for proximity says.  Silent saylinks still require a target.
